# wheel

./: README.md  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
database_manager/: Cargo.toml
database_manager/src/: main.rs
discord_bot/: Cargo.toml
discord_bot/src/: main.rs
src/routes/: +page.svelte
src/routes/rat/: +page.svelte
wheel_frontend/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
wheel_frontend/src/lib/components/: SearchBox.svelte
wheel_frontend/src/routes/: +page.svelte
wheel_frontend/src/routes/rat/: +page.svelte
