[package]
name = "rust_discord_bot"
version = "0.1.0"
authors = ["Harry Peach"]
edition = "2018"

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
